--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=false
 spring.jpa.show-sql=false
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+liquibase.change-log=classpath:liquibase-changeLog.xml
